fix header z-index overlap

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -100,6 +100,7 @@
       padding: 4.5rem 2rem;
       flex-flow: row wrap;
       transition: .2s ease-in-out;
+      z-index: 1;
 
       .header-nav {
         width: 100%;
